# kitchen-timer

./: .clang-format  .gitignore  CMakeLists.txt  Graphics.cpp  Graphics.h  LICENSE.md  README.md  alarm-counter.cpp  alarm-counter.h  alarm-sound.cpp  alarm-sound.h  display.cpp  display.h  dots-mono.cpp  dots-mono.h  font.h  fonts-headers.h  fortimer_large.cpp  fortimer_large.h  fortimer_large_long.cpp  fortimer_large_long.h  fortimer_small.cpp  fortimer_small.h  kitchen-timer.cpp  oled.cpp  oled.h  switches.cpp  switches.h
